sales/triggerFramework/objects/TriggerObject__mdt/TriggerObject__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to hold trigger related information</description>
    <label>Trigger Object</label>
    <pluralLabel>Trigger Objects</pluralLabel>
</CustomObject>