sales/triggerFramework/objects/TriggerObject__mdt/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <description>API Name of the object</description>
    <label>Object Api Name</label>
    <length>43</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>