sales/triggerFramework/objects/TriggerObject__mdt/fields/RunAssignmentRules__c.field-meta.xml
<CustomField>
    <fullName>RunAssignmentRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to control assignment rule run</description>
    <label>Run Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>