sales/triggerFramework/objects/TriggerObject__mdt/fields/RunProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>RunProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to control process builder run</description>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>