sales/triggerFramework/objects/TriggerObject__mdt/fields/RunTrigger__c.field-meta.xml
<CustomField>
    <fullName>RunTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to control trigger run</description>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>