sales/triggerFramework/objects/TriggerObject__mdt/fields/RunValidationRules__c.field-meta.xml
<CustomField>
    <fullName>RunValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to control validation rule run</description>
    <label>Run Validation Rules</label>
    <type>Checkbox</type>
</CustomField>