sales/triggerFramework/objects/TriggerObject__mdt/fields/SendOutboundMessages__c.field-meta.xml
<CustomField>
    <fullName>SendOutboundMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to control outbound messages</description>
    <label>Send Outbound Messages</label>
    <type>Checkbox</type>
</CustomField>